# nexus-rl-system

./: .dockerignore  .gitignore  .hfignore  CLAUDE.md  DASHBOARD_REDESIGN_COMPLETE.md  DEMO_WALKTHROUGH.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SUBMISSION_CHECKLIST.md  __init__.py  app.py  blog_post.md  blog_post_final.md  client.py  deploy_to_hf_spaces.py  docker-compose.yml  episode_rewards.json  gate.sh  gradio_app.py  gradio_app_backup.py  gradio_app_minimal.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  router.py  start.sh  streamlit_app.py  streamlit_app_v2.py  test_api_complete.sh  test_hf_space_deployment.py  test_local_deployment.sh  test_regression_local.py  train.py  training_simulator.py
notebooks/: grpo_colab.ipynb  grpo_colab_enhanced.ipynb  grpo_colab_longrun_resumable.py  grpo_colab_v2.ipynb
scripts/: __init__.py  export_component_metrics.py  export_reward_plot.py  export_submission_snapshot.py  playwright_ui_check.py  run_reward_ablations.py  sync_training_runs_web.py
server/: agents.py  app.py  data_models.py  difficulty.py  environment.py  global_curriculum.py  incidents.py  reward.py  tools.py
tests/: conftest.py  test_agents.py  test_api.py  test_coalition.py  test_env.py  test_export_reward_plot.py  test_global_curriculum.py  test_incidents.py  test_ml_metrics.py  test_reward.py  test_tools.py
training/: client.py  grpo_train.py  inference.py  train.py
training_artifacts/: pre_event_benchmark.json
web/: dashboard.html  metrics-dashboard.html
(+67 files in other folders)
