[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nexus-enhanced"
version = "1.0.0"
description = "Multi-Agent Enterprise Incident Response RL Environment (OpenEnv v0.2.3)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Team Falcons", email = "kunalkachru23@gmail.com" },
]
keywords = ["reinforcement-learning", "multi-agent", "incident-response", "openenv", "grpo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openenv>=0.1.0",
]

[project.optional-dependencies]
training = [
    "trl>=0.8.0",
    "unsloth",
    "transformers>=4.40.0",
    "torch>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"
nexus-server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/team-falcons/nexus-enhanced"
Repository = "https://github.com/team-falcons/nexus-enhanced"

[tool.pytest.ini_options]
testpaths = ["tests"]
